src/test/deca/avecObjet/valid/override_call_via_base_ref.deca
// Description :
//    Appel d'une méthode surchargée via une référence de type base (polymorphisme).
//
// Resultats :
//    Affiche : 2

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    int f() {
        return 2;
    }
}

{
    A a = new B();
    println(a.f());
}

