src/test/deca/avecObjet/invalid/return_type_mismatch_custom.deca
// Description :
// return d'un type incorrect
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : type de retour incompatible

class P {
    int f() {
        return 3.14; // doit échouer
    }
}
